// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-WZYut bucJPz sc-ikXwFM hzaHUi"
      color="#fff"
    >
      <div
        class="sc-dtLLSn hCgWJd"
      >
        10
        %
      </div>
      <div
        class="sc-fHCHyC dlMiAc"
        style="width: 10%;"
      >
        <div
          class="sc-dkQUaI bpwCpL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-WZYut bucJPz sc-ikXwFM hzaHUi"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-dtLLSn hCgWJd"
      >
        10
        %
      </div>
      <div
        class="sc-fHCHyC femlEu"
        style="width: 10%;"
      >
        <div
          class="sc-dkQUaI bpwCpL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-WZYut fKFfGu sc-ikXwFM hzaHUi"
      color="#fff"
    >
      <div
        class="sc-dtLLSn hCgWJd"
      >
        10
        %
      </div>
      <div
        class="sc-fHCHyC dlMiAc"
        style="width: 10%;"
      >
        <div
          class="sc-dkQUaI bpwCpL"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
